feat: provision wallet on registration
